# joe-ccass-platform

./: .env.example  .gitignore  README.md  TASK.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  api.py  backfill_ccass.py  config.py  errors.py  mcp_server.py  models.py  streamlit_ui.py
app/core/: __init__.py  normalizers.py
app/domain/: __init__.py  history.py
app/services/: big_changes.py  ccass.py  changes.py  concentration.py  holdings_lkg.py  latest_holdings.py
app/sources/: __init__.py  google_drive_csv.py  registry.py  webbsite.py  webbsite_parser.py
app/storage/: __init__.py  history.py  migrations.py
ccass_core/: __init__.py  big_changes_report.py  changes_report.py  collector.py  compute.py  concentration_report.py  fetch_webb.py  normalize.py  report.py
docs/: ARCHITECTURE.md  DATA_SOURCE_GUIDE.md  DEVELOPMENT_RULES.md  PROJECT_SPEC.md  ROADMAP.md
examples/: ccass_template.csv
scripts/: install_collector_task.ps1
tests/: conftest.py  test_api_report.py  test_backfill.py  test_big_changes_product.py  test_changes_product.py  test_collector.py  test_compute.py  test_concentration_product.py  test_deployment_files.py  test_google_drive_csv.py  test_history_storage.py  test_holdings_lkg.py  test_issue_resolution.py  test_latest_holdings_product.py  test_normalizers.py  test_report.py  test_service_sources.py  test_source_registry.py  test_streamlit_ui.py  test_upstream_failures.py  test_webbsite_adapter.py  test_webbsite_parser.py
tests/fixtures/webbsite/: README.md  (+4 more)
(+1 files in other folders)
